<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_main_incomeexpense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/layout_incomeexpense"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg_switch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="@dimen/margin_medium"
            android:background="@drawable/switch_out_line"
            android:checkedButton="@+id/rb_income"
            android:orientation="horizontal"
            android:padding="2dp">

            <RadioButton
                android:id="@+id/rb_income"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/income"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_expense"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/expense"
                android:textAllCaps="true"
                android:textColor="@color/switch_textcolor"
                android:textSize="16sp" />
        </RadioGroup>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_weight="2">

                        <EditText
                            android:id="@+id/edt_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edt_amount"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:lines="1"
                            android:maxLength="15"
                            android:saveEnabled="true"
                            android:singleLine="true"
                            android:textColor="@color/edit_textcolor"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/img_bill"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/camera" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/layout_background"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:text="@string/date" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="14/02/2019"
                        android:textColor="@color/edit_textcolor"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/layout_background"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:text="@string/category" />

                    <TextView
                        android:id="@+id/tv_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/arrow_right"
                        android:drawablePadding="4dp"
                        android:padding="4dp"
                        android:text="@string/select_category"
                        android:textColor="@color/edit_textcolor"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/layout_background"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:text="@string/method" />

                    <TextView
                        android:id="@+id/tv_method"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/arrow_right"
                        android:drawablePadding="4dp"
                        android:padding="4dp"
                        android:text="@string/select_method"
                        android:textColor="@color/edit_textcolor"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_recurring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/layout_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="4dp"
                            android:paddingBottom="4dp"
                            android:text="@string/recurring" />

                        <TextView
                            android:id="@+id/tv_recurring"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/auto_repeat"
                            android:textColor="@color/edit_textcolor"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/tbRecurring"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:thumb="@drawable/switch_on_off"
                        app:track="@drawable/switch_out_line" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/shipper_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_note"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="top|left|center_vertical|center_horizontal|center"
                            android:hint="@string/additional_note"
                            android:inputType="textMultiLine"
                            android:lines="3"
                            android:maxLines="3"
                            android:textColor="@color/edit_textcolor"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
