<?xml version="1.0" encoding="utf-8" ?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_close_dialog"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white30"
    android:tag="layout/dialog_exit_screen_0">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5.0dip">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20.0dip"
                    android:layout_marginTop="30.0dip"
                    android:layout_marginRight="20.0dip"
                    android:layout_marginBottom="15.0dip"
                    android:gravity="center"
                    android:text="@string/select_security_question"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/sub_spiner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20.0dip"
                    android:layout_marginRight="20.0dip"

                    android:entries="@array/security"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/ans_security"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_10"
                    android:layout_marginTop="@dimen/value_8"
                    android:layout_marginRight="@dimen/text_10"
                    android:hint="@string/enter_your_ans" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="25.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginBottom="20.0dip"

                    android:orientation="horizontal">


                    <androidx.cardview.widget.CardView

                        android:layout_width="0.0dip"
                        android:layout_height="35.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="10.0dip"
                        android:layout_weight="1.0"
                        android:foreground="?android:selectableItemBackground"

                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="5.0dip">

                        <TextView
                            android:id="@+id/btn_ok"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:text="@string/action_ok"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/white"
                            android:textSize="17dp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView

                        android:layout_width="0.0dip"
                        android:layout_height="35.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="10.0dip"
                        android:layout_weight="1.0"
                        android:foreground="?android:selectableItemBackground"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="5.0dip">

                        <TextView
                            android:id="@+id/btn_cancel"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:text="@string/cancel"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/white"
                            android:textSize="17dp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
